# A4 - Auth - Login & protect/src/auth/auth.route.js
@@ -1,0 +1,7 @@
+import { Router } from "express";
+import { authController } from "./auth.controller.js";
+
+export const authRouter = Router();
+
+authRouter.post("/signup", authController.signup);
+authRouter.post("/login", authController.login);
